--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
                             <div class="hero-style2">
                                 <span class="sub-title text-white" data-ani="slideinup" data-ani-delay="0.2s"><img src="assets/img/icon/pets.svg" style="filter: invert(1);" alt="shape">100% Natural</span>
                                 <h1 class="hero-title">
-                                    <span class="title1" data-ani="slideinup" data-ani-delay="0.4s">Our Organic</span>
-                                    <span class="title2" data-ani="slideinup" data-ani-delay="0.5s">Collection.</span>
+                                    <span class="title1" data-ani="slideinup" data-ani-delay="0.4s">Eco-Friendly</span>
+                                    <span class="title2" data-ani="slideinup" data-ani-delay="0.5s">Pet Care.</span>
                                 </h1>
                                 <div class="btn-group" data-ani="slideinup" data-ani-delay="0.7s">
                                     <a href="shop.html" class="th-btn">Shop Now<i class="fas fa-chevrons-right ms-2"></i></a>
@@ -317,8 +317,8 @@
                             <div class="hero-style2">
                                 <span class="sub-title text-white" data-ani="slideinup" data-ani-delay="0.2s"><img src="assets/img/icon/pets.svg" style="filter: invert(1);" alt="shape">100% Naturals</span>
                                 <h1 class="hero-title">
-                                    <span class="title1" data-ani="slideinup" data-ani-delay="0.4s">Our Organic</span>
-                                    <span class="title2" data-ani="slideinup" data-ani-delay="0.5s">Collection</span>
+                                    <span class="title1" data-ani="slideinup" data-ani-delay="0.4s">Eco-Friendly</span>
+                                    <span class="title2" data-ani="slideinup" data-ani-delay="0.5s">Pet Care</span>
                                 </h1>
                                 <div class="btn-group" data-ani="slideinup" data-ani-delay="0.7s">
                                     <a href="shop.html" class="th-btn">Shop Now<i class="fas fa-chevrons-right ms-2"></i></a>
@@ -351,8 +351,8 @@
                             <div class="hero-style2">
                                 <span class="sub-title text-white" data-ani="slideinup" data-ani-delay="0.2s"><img src="assets/img/icon/pets.svg" style="filter: invert(1);" alt="shape">100% Natural</span>
                                 <h1 class="hero-title">
-                                    <span class="title1" data-ani="slideinup" data-ani-delay="0.4s">Our Organic</span>
-                                    <span class="title2" data-ani="slideinup" data-ani-delay="0.5s">Collection</span>
+                                    <span class="title1" data-ani="slideinup" data-ani-delay="0.4s">Eco-Friendly</span>
+                                    <span class="title2" data-ani="slideinup" data-ani-delay="0.5s">Pet Care</span>
                                 </h1>
                                 <div class="btn-group" data-ani="slideinup" data-ani-delay="0.7s">
                                     <a href="shop.html" class="th-btn">Shop Now<i class="fas fa-chevrons-right ms-2"></i></a>
@@ -441,7 +441,7 @@
     </section>
 
      <!--==============================
-    Feature Area  
+    Why us Area  
     ==============================-->
     <div class="overflow-hidden mt-50 pt-60">
         <div class="container">
@@ -449,8 +449,8 @@
                 <div class="col-xl-6 text-center text-xl-start">
                     <div class="title-area">
                         <span class="sub-title"><img src="assets/img/icon/pets.svg" alt="shape">Why Choose Us</span>
-                        <h2 class="sec-title">Nourish Your Pet With Pure Organic Goodness!</h2>
-                        <p class="sec-text">We’re committed to giving pets the care they deserve using only the safest, certified organic ingredients. No harmful chemicals, just nature’s best.</p>
+                        <h2 class="sec-title">Pet Wellness Starts with Clean, Green Care</h2>
+                        <p class="sec-text">At Eco-Cleanser, we believe your pet’s hygiene routine shouldn’t compromise their health or the environment. That’s why every product is thoughtfully formulated for safety, effectiveness, and sustainability.</p>
                     </div>
                 </div>
             </div>
@@ -463,29 +463,29 @@
                                     <div class="box-icon">
                                         <img src="assets/img/icon/pets.svg" alt="Icon">
                                     </div>
-                                    <h3 class="box-title">Certified Organic Ingredients</h3>
-                                    <p class="box-text">No chemicals, no compromise</p>
+                                    <h3 class="box-title">No Parabens, or Artificial Dyes</h3>
+                                    <p class="box-text">Just pure, worry-free cleanliness.</p>
                                 </div>
                                 <div class="choose-feature">
                                     <div class="box-icon">
                                         <img src="assets/img/icon/dog-face.svg" alt="Icon">
                                     </div>
-                                    <h3 class="box-title">Cruelty-Free Practices </h3>
-                                    <p class="box-text">Tested with love, not on animals</p>
+                                    <h3 class="box-title">100% Safe for All Breeds & Ages</h3>
+                                    <p class="box-text">Safe for every pet, every time.</p>
                                 </div>
                                 <div class="choose-feature">
                                     <div class="box-icon">
                                         <img src="assets/img/icon/paw-prints.svg" alt="Icon">
                                     </div>
-                                    <h3 class="box-title">Eco-Conscious Packaging</h3>
-                                    <p class="box-text">100% recyclable materials</p>
+                                    <h3 class="box-title">Made in India</h3>
+                                    <p class="box-text">Powered by nature, Proudly herbal.</p>
                                 </div>
                                 <div class="choose-feature">
                                     <div class="box-icon">
                                         <img class="filr-invert" src="assets/img/icon/choose_feature_4.svg" alt="Icon">
                                     </div>
-                                    <h3 class="box-title">Vet Approved</h3>
-                                    <p class="box-text">Safe for all breeds & coat types.</p>
+                                    <h3 class="box-title">Vet & Dermatologist Approved</h3>
+                                    <p class="box-text">Expert-backed formulas you can feel good about.</p>
                                 </div>
                             </div>
                         </div>
@@ -516,7 +516,7 @@
         <div class="container">
             <div class="title-area text-center">
                 <span class="sub-title"><img src="assets/img/icon/pets.svg" alt="Icon">What Makes Our Products Special?</span>
-                <h2 class="sec-title">Inside Every Bottle – A Commitment to Quality</h2>
+                <h2 class="sec-title"> Every Bottle, A Promise of Natural Wellness</h2>
             </div>
             <div class="row gy-4 justify-content-center">
                 <div class="col-xl-3 col-md-6 process-box-wrap">
@@ -528,8 +528,8 @@
                             <img src="assets/img/normal/img1.png" alt="image" style="border-radius: 20px 100px 50px 100px;">
                         </div>
                         <!-- <p class="box-number">Step - 01</p> -->
-                        <h3 class="box-title">Work Planning</h3>
-                        <p class="box-text">We select eco-certified farms for sourcing ingredients that support soil health and biodiversity.</p>
+                        <h3 class="box-title">Ethically Sourced Ingredients</h3>
+                        <p class="box-text">We carefully select organic ingredients that are free from pesticides and harvested sustainably.</p>
                     </div>
                 </div>
                 <div class="col-xl-3 col-md-6 process-box-wrap">
@@ -538,11 +538,11 @@
                             <img src="assets/img/icon/dog-face.svg" alt="icon">
                         </div>
                         <div class="box-img">
-                            <img src="assets/img/normal/img3.png" alt="image" style="border-radius: 20px 100px 50px 100px;">
+                            <img src="assets/img/normal/img2.png" alt="image" style="border-radius: 20px 100px 50px 100px;">
                         </div>
                         <!-- <p class="box-number">Step - 02</p> -->
-                        <h3 class="box-title">Ingredient Sourcing</h3>
-                        <p class="box-text">Our key ingredients – like neem, coconut oil, and aloe vera – are harvested without synthetic pesticides.</p>
+                        <h3 class="box-title">Cold-Processed Goodness</h3>
+                        <p class="box-text">Gentle, cold-processing ensures that every drop of goodness is preserved without heat degradation.</p>
                     </div>
                 </div>
                 <div class="col-xl-3 col-md-6 process-box-wrap">
@@ -551,11 +551,11 @@
                             <img src="assets/img/icon/paw-prints.svg" alt="icon">
                         </div>
                         <div class="box-img">
-                            <img src="assets/img/normal/img2.png" alt="image" style="border-radius: 20px 100px 50px 100px;">
+                            <img src="assets/img/normal/img3.png" alt="image" style="border-radius: 20px 100px 50px 100px;">
                         </div>
                         <!-- <p class="box-number">Step - 03</p> -->
-                        <h3 class="box-title">Safe Processing</h3>
-                        <p class="box-text">Our formulas are made in clean, controlled environments to retain natural benefits and avoid harsh chemicals.</p>
+                        <h3 class="box-title">Pet-Safe Formulas</h3>
+                        <p class="box-text">Our products are dermatologically and vet-tested to ensure they’re safe for your furry companions every time.</p>
                     </div>
                 </div>
                 <div class="col-xl-3 col-md-6 process-box-wrap">
@@ -567,8 +567,8 @@
                             <img src="assets/img/normal/img0.png" alt="image" style="border-radius: 20px 100px 50px 100px;">
                         </div>
                         <!-- <p class="box-number">Step - 04</p> -->
-                        <h3 class="box-title">Sustainable Packaging</h3>
-                        <p class="box-text">We pack every product in biodegradable or recyclable materials to reduce waste and protect the environment.</p>
+                        <h3 class="box-title">Eco-Friendly Packaging</h3>
+                        <p class="box-text">We use biodegradable or recyclable materials to help reduce waste and protect the planet.</p>
                     </div>
                 </div>
             </div>
@@ -625,7 +625,7 @@
                         <input class="form-control" type="email" placeholder="Email Address" required="">
                     </div> -->
                     <button type="submit" class="th-btn style6">Shop Now on Amazon <i class="fa-brands fa-amazon"></i></button>
-                    <button type="submit" class="th-btn style6">Blogs</button>
+                    <button type="submit" class="th-btn style6">Blogs <i class="fa-regular fa-message-pen"></i></button>
                 </form>
             </div>
         </div>
