--- a/shampo.html
+++ b/shampo.html
@@ -299,17 +299,18 @@
                 </div>
                 <div class="col-lg-6 align-self-center">
                     <div class="product-about">
-                        <h2 class="product-title">Eco Cleanser Pet Shampoo with Conditioner for Dog & Cat</h2>
+                        <h2 class="product-title">Eco Cleanser Pet Shampoo with Conditioner</h2>
                         <div class="product-rating">
                             <div class="star-rating" role="img" aria-label="Rated 5.00 out of 5"><span style="width:100%">Rated <strong class="rating">5.00</strong> out of 5 based on <span class="rating">1</span> customer rating</span></div>
-                            <a href="shop-details.html" class="woocommerce-review-link">(<span class="count">4</span> customer reviews)</a>
+                            (<span class="count">250+</span> customer reviews)
                         </div>
+                        <h6>Key Features:</h6>
                         <ul>
-                            <li>Nourishing Formula: This pet shampoo with conditioner is infused with colloidal oatmeal extract to moisturise and soothe dry, itchy skin, reducing dandruff risk.</li>
-                            <li>PH Balancing: Apple cider vinegar helps balance the skin's pH levels and improves overall pet skin health.</li>
-                            <li>Natural Ingredients: Key ingredients include purified water, sodium lauryl ether sulphate, cocamidopropyl betaine, aloe barbadensis extract, glycerin, and perfume.</li>
-                            <li>Easy Application: Simply wet your pet's coat, lather the shampoo for 2-3 minutes, and rinse thoroughly with water.</li>
-                            <li>Suitable for Dogs and Cats: This versatile shampoo is suitable for bathing both dogs and cats, leaving their coats clean and glossy.</li>
+                            <li>Nourishing Formula: Infused with colloidal oatmeal extract, this shampoo soothes dry, itchy skin and helps reduce dandruff.</li>
+                            <li>PH Balancing: Apple cider vinegar restores the skin’s natural pH, promoting overall skin health and a shiny, manageable coat.</li>
+                            <li>Moisturizing: Aloe Vera and glycerin work together to deeply hydrate, leaving your pet's fur soft, shiny, and nourished without greasy residue.</li>
+                            <li>Easy to Use: Simply wet your pet’s coat, lather for 2-3 minutes, and rinse off. It's a quick, easy grooming solution.</li>
+                            <li>Suitable for All Breeds: This versatile shampoo is ideal for dogs and cats of all breeds, even those with sensitive skin.</li>
                         </ul>
                         <div class="mt-2 link-inherit">
                             <p>
@@ -318,68 +319,76 @@
                             </p>
                         </div>
                         <div class="actions">
-                            <button class="th-btn">Shop On Amazon <i class="fas fa-chevrons-right ms-2"></i></button>
+                            <button class="th-btn">Shop On Amazon <i class="fa-brands fa-amazon"></i></button>
                         </div>
                         <div class="product_meta">
-                            <span class="sku_wrapper">Scent: <span class="sku">Aloe Vera</span></span>
-                            <span class="posted_in">Item Form: <a href="shop.html">Liquid</a></span>
-                            <span>Liquid Volume: <a href="shop.html"></a><a href="shop.html">200 Millilitres</a></span>
-                            <span class="sku_wrapper">Target Species: <span class="sku">Dog & Cat</span></span>
+                            <span class="sku_wrapper">Brand: <span class="sku"> Eco Cleanser</span></span>
+                            <span class="sku_wrapper">Volume: <span class="sku">200ml</span></span>
+                            <span class="sku_wrapper">Recommended Use: <span class="sku">Pet Bathing, Coat Conditioning</span></span>
+                            <span class="sku_wrapper">Product Form: <span class="sku">Liquid Shampoo</span></span>
+                            <span class="sku_wrapper">Main Benefits: <span class="sku">Coat Health, Dandruff Control, Moisturizing, Soothing</span></span>
+                            <span class="sku_wrapper">Item Dimensions: <span class="sku">5 x 5 x 16 cm</span></span>
+                            <span class="sku_wrapper">Target Species: <span class="sku">Dogs and Cats</span></span>
                             <span class="sku_wrapper">Manufacturer: <span class="sku">Green medi Biotech</span></span>
+                            <span class="sku_wrapper">Made in: <span class="sku">India</span></span>
+                            <span class="sku_wrapper">Item Model Number <span class="sku">eco109</span></span>
+                            <span class="sku_wrapper">Item Weight<span class="sku">200g</span></span>
                         </div>
                     </div>
                 </div>
             </div>
-            <section class="why-sec3 space scaled-wrapper mt-5">
+            <section class="why-sec3 mt-80 b-rds-0 pb-3">
                 <div class="container">
-                    <div class="row justify-content-center">
+                    <!-- <div class="row justify-content-center">
                         <div class="col-lg-5 col-md-7">
                             <div class="title-area text-center">
                                 <span class="sub-title"><img src="assets/img/icon/paw-prints.svg" alt="Icon" style="height: 70px;">Gentle Cleanse, Pure Comfort</span>
                                 <h2 class="sec-title">Eco Cleanser Pet Soap</h2>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="row gx-0 justify-content-between">
-                        <div class="col-sm-auto">
+                        <div class="col-lg-6 col-12">
                             <div class="why-feature1-left">
-                                <div class="why-feature1">
+                                <div class="why-feature-prod">
                                     <div class="box-icon">
                                         <img src="assets/img/icon/pets.svg" alt="">
                                     </div>
                                     <div class="media-body">
-                                        <div class="box-title">100% Organic</div>
-                                        <p class="box-text">Our products are certified by reputable organic.</p>
+                                        <div class="box-title">How to Use</div>
+                                        <p class="box-text">Wet your pet's coat thoroughly with lukewarm water. Apply the shampoo to your pet's fur and lather for 2-3 minutes, ensuring full coverage. 
+                                            Rinse thoroughly with water and enjoy the clean, shiny result. Avoid direct contact with eyes. In case of eye contact, rinse immediately with water.
+                                        </p>
                                     </div>
                                 </div>
-                                <div class="why-feature1">
+                                <div class="why-feature-prod">
                                     <div class="box-icon">
                                         <img src="assets/img/icon/pets.svg" alt="">
                                     </div>
                                     <div class="media-body">
-                                        <div class="box-title">Fresh Products</div>
-                                        <p class="box-text">Our products are certified by reputable organic.</p>
+                                        <div class="box-title">Why Choose Eco Cleanser Pet Shampoo?</div>
+                                        <p class="box-text">Safe and Gentle: Free from harsh chemicals, this shampoo offers a gentle cleanse for pets with sensitive skin. All-in-One Formula: This shampoo not only cleans but also conditions the fur, leaving it soft, shiny, and healthy-looking. Eco-Friendly: Eco Cleanser is committed to providing safe, natural, and environmentally conscious grooming products that are kind to your pet and the planet.</p>
                                     </div>
                                 </div>
-                                <div class="why-feature1">
+                                <div class="why-feature-prod">
                                     <div class="box-icon">
                                         <img src="assets/img/icon/pets.svg" alt="">
                                     </div>
                                     <div class="media-body">
-                                        <div class="box-title">Vet-Approved</div>
-                                        <p class="box-text">Our products are certified by reputable organic.</p>
+                                        <div class="box-title">Storage & Safety</div>
+                                        <p class="box-text">Store in a cool, dry place at a temperature not exceeding 25°C. Always keep the product away from direct sunlight. For external use only</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-auto d-none d-lg-block">
-                            <div class="img-box4 mt-0">
-                                <img src="assets/img/product/eco-shampo1.png" alt="Why" style="height: 430px;">
+                        <div class="col-lg-6 col-12 d-lg-block prd-img mt-3">
+                            <div class="img-box4 prd-img mt-0">
+                                <img class="" src="assets/img/product/eco-shampo1.png" alt="Why">
                             </div>
                         </div>
-                        <div class="col-sm-auto">
-                            <div class="why-feature1-right">
-                                <div class="why-feature1">
+                        <!-- <div class="col-sm-auto">
+                            <div class="why-feature-prod-right">
+                                <div class="why-feature-prod">
                                     <div class="box-icon">
                                         <img src="assets/img/icon/pets.svg" alt="">
                                     </div>
@@ -388,7 +397,7 @@
                                         <p class="box-text">Our products are certified by reputable organic.</p>
                                     </div>
                                 </div>
-                                <div class="why-feature1">
+                                <div class="why-feature-prod">
                                     <div class="box-icon">
                                         <img src="assets/img/icon/pets.svg" alt="">
                                     </div>
@@ -397,7 +406,7 @@
                                         <p class="box-text">Our products are certified by reputable organic.</p>
                                     </div>
                                 </div>
-                                <div class="why-feature1">
+                                <div class="why-feature-prod">
                                     <div class="box-icon">
                                         <img src="assets/img/icon/pets.svg" alt="">
                                     </div>
@@ -407,7 +416,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </section>
@@ -419,10 +428,10 @@
                     <a class="nav-link th-btn active" id="reviews-tab" data-bs-toggle="tab" href="#reviews" role="tab" aria-controls="reviews" aria-selected="true">Customer Reviews</a>
                 </li>
             </ul> -->
-            <div class="" id="">
+            <div class="mt-5" id="">
                 <div class="">
-                    <p>Prepare to embark on a sensory journey with the Bosco Apple, a fruit that transcends the ordinary and promises an unparalleled taste experience. These apples are nothing short of nature’s masterpiece, celebrated for their distinctive blend of flavors and their captivating visual allure. Bosco Apples are a revelation for your taste buds. Their impeccable balance of sweetness and tartness creates a complex, layered taste profile that keeps you coming back for more. Each bite is a symphony of sweet and tangy notes, making these apples a gastronomic delight whether enjoyed fresh or as a key ingredient in your favorite culinary creations.</p>
-                    <p>The Bosco Apple is not just a fruit; it’s a work of art. Its striking, deep red skin is adorned with intricate speckles, making it a showstopper in the world of fruit aesthetics. Display these apples with pride in your kitchen, and you’ll undoubtedly draw admiration from all who see them. We take our commitment to the environment seriously. Bosco Apples are cultivated on eco-friendly orchards that prioritize sustainable farming practices. You can savor these apples knowing they are grown with respect for the planet, aligning with your values of environmental responsibility. Whether you’re a culinary aficionado or a casual home chef, Bosco Apples offer limitless possibilities in the kitchen. Slice them into a vibrant salad, transform them into mouthwatering pies, or blend them into wholesome applesauce. The culinary canvas is yours to paint with these versatile apples.</p>
+                    <p>Give your pets the premium care they deserve with Eco Cleanser Pet Shampoo with Conditioner—a gentle, all-in-one grooming solution formulated for both dogs and cats. Enriched with colloidal oatmeal, aloe vera, and apple cider vinegar, this 200ml shampoo deeply nourishes, hydrates, and soothes the skin while enhancing coat health. Ideal for pets with dry, itchy, or sensitive skin, it provides relief from irritation and dandruff while restoring the skin’s natural pH balance. The addition of glycerin ensures your pet’s fur stays soft, shiny, and manageable—without any greasy residue. Whether you’re tackling a full bath or refreshing their coat, this natural shampoo makes bath time easy, effective, and enjoyable for your furry friend</p>
+                    <p>Crafted by Green Medi Biotech and made in India, this shampoo is free from harsh chemicals and synthetic additives—making it safe for regular use on pets of all breeds and ages. Its gentle lather and soothing ingredients provide a calming grooming experience, while its eco-friendly, pet-safe formula reflects Eco Cleanser’s commitment to both animal well-being and environmental care. Convenient to use and easy to rinse off, this shampoo-and-conditioner combo simplifies grooming routines while delivering salon-quality results at home. With Eco Cleanser Pet Shampoo with Conditioner, every bath becomes a nourishing, skin-loving ritual your pet will appreciate</p>
                 </div>
                 <div class="mt-5" >
                     <div class="woocommerce-Reviews">
