--- a/soap.html
+++ b/soap.html
@@ -300,17 +300,19 @@
                 </div>
                 <div class="col-lg-6 align-self-center">
                     <div class="product-about">
-                        <h2 class="product-title">Eco Cleanser Soap | Aloevera and Vitamin E | Made for Dogs and Cats</h2>
+                        <h2 class="product-title">Eco Cleanser Pet Soap – Aloe Vera & Vitamin E</h2>
+                        <p>Gentle, Nourishing & Eco-Friendly Grooming for Dogs and Cats</p>
                         <div class="product-rating">
                             <div class="star-rating" role="img" aria-label="Rated 5.00 out of 5"><span style="width:100%">Rated <strong class="rating">5.00</strong> out of 5 based on <span class="rating">1</span> customer rating</span></div>
-                            <a href="shop-details.html" class="woocommerce-review-link">(<span class="count">4</span> customer reviews)</a>
+                            (<span class="count">300+</span> customer reviews)
                         </div>
+                        <h6>Key Features:</h6>
                         <ul>
-                            <li>Gentle Cleansing: This eco-friendly soap is specially formulated with aloevera and vitamin E to gently cleanse your furry friend's coat and skin.</li>
-                            <li>Pet-Friendly Formula: Made with natural, pet-safe ingredients, this cleanser is suitable for use on both dogs and cats.</li>
-                            <li>Nourishing Properties: Enriched with aloevera and vitamin E, it helps nourish and moisturise your pet's skin and fur.</li>
-                            <li>Eco-Conscious Choice: This cleanser is an environmentally-friendly option for pet grooming, free from harsh chemicals.</li>
-                            <li>Versatile Usage: Suitable for regular bathing or spot cleaning, this multi-purpose cleanser can be used for various grooming needs.</li>
+                            <li>Gentle Cleansing: Formulated to clean without irritation, the mild ingredients wash away dirt while maintaining your pet's natural oils.</li>
+                            <li>Natural Nourishment: Infused with Aloe Vera to soothe irritated skin and Vitamin E to nourish and strengthen fur.</li>
+                            <li>Safe for All Breeds: Made with pet-safe, non-toxic ingredients—free from harsh chemicals, parabens, and artificial fragrances.</li>
+                            <li>Eco-Friendly Choice: Biodegradable and environmentally conscious, perfect for planet-loving pet parents.</li>
+                            <li>Multipurpose Use: Ideal for regular baths or quick spot cleaning—great for active pets and sensitive skin alike.</li>
                         </ul>
                         <div class="mt-2 link-inherit">
                             <p>
@@ -319,68 +321,76 @@
                             </p>
                         </div>
                         <div class="actions">
-                            <button class="th-btn">Shop On Amazon <i class="fas fa-chevrons-right ms-2"></i></button>
+                            <a href="" class="th-btn">Shop On Amazon <i class="fa-brands fa-amazon"></i></a>
                         </div>
                         <div class="product_meta">
+                            <span class="sku_wrapper">Brand: <span class="sku"> Eco Cleanser</span></span>
                             <span class="sku_wrapper">Scent: <span class="sku">Aloe Vera</span></span>
-                            <span class="posted_in">Item Form: <a href="shop.html">Bar</a></span>
-                            <span>Liquid Volume: <a href="shop.html">Fruits</a><a href="shop.html">8 Fluid Ounces</a></span>
-                            <span class="sku_wrapper">Target Species: <span class="sku">Dog</span></span>
+                            <span class="sku_wrapper">Recommended Use: <span class="sku">Hydrating, Nourishing</span></span>
+                            <span class="sku_wrapper">Form: <span class="sku">Bar Soap</span></span>
+                            <span class="sku_wrapper">Weight: <span class="sku">75g</span></span>
+                            <span class="sku_wrapper">Item Dimensions: <span class="sku">10 x 7 x 3 cm</span></span>
+                            <span class="sku_wrapper">Target Species: <span class="sku">Dogs and Cats</span></span>
                             <span class="sku_wrapper">Manufacturer: <span class="sku">Green medi Biotech</span></span>
+                            <span class="sku_wrapper">Made in: <span class="sku">India</span></span>
+                            <span class="sku_wrapper">Best Seller Rank: <span class="sku">#11 in Dog Shower & Bath Supplies (Amazon India)</span></span>
                         </div>
                     </div>
                 </div>
             </div>
-            <section class="why-sec3 space scaled-wrapper mt-5">
+            <section class="why-sec3 mt-80 b-rds-0 pb-3">
                 <div class="container">
-                    <div class="row justify-content-center">
+                    <!-- <div class="row justify-content-center">
                         <div class="col-lg-5 col-md-7">
                             <div class="title-area text-center">
                                 <span class="sub-title"><img src="assets/img/icon/paw-prints.svg" alt="Icon" style="height: 70px;">Gentle Cleanse, Pure Comfort</span>
                                 <h2 class="sec-title">Eco Cleanser Pet Soap</h2>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="row gx-0 justify-content-between">
-                        <div class="col-sm-auto">
+                        <div class="col-lg-6 col-12">
                             <div class="why-feature1-left">
-                                <div class="why-feature1">
+                                <div class="why-feature-prod">
                                     <div class="box-icon">
                                         <img src="assets/img/icon/pets.svg" alt="">
                                     </div>
                                     <div class="media-body">
-                                        <div class="box-title">100% Organic</div>
-                                        <p class="box-text">Our products are certified by reputable organic.</p>
+                                        <div class="box-title">What’s Inside?</div>
+                                        <p class="box-text">Aloe Vera – Naturally hydrates, soothes irritation, and supports healing.
+                                                            Vitamin E – Promotes skin regeneration and improves fur health.
+                                                            No Harsh Chemicals – Free from parabens, sulfates, and synthetic fragrances.
+                                        </p>
                                     </div>
                                 </div>
-                                <div class="why-feature1">
+                                <div class="why-feature-prod">
                                     <div class="box-icon">
                                         <img src="assets/img/icon/pets.svg" alt="">
                                     </div>
                                     <div class="media-body">
-                                        <div class="box-title">Fresh Products</div>
-                                        <p class="box-text">Our products are certified by reputable organic.</p>
+                                        <div class="box-title">Why Choose Eco Cleanser Pet Soap?</div>
+                                        <p class="box-text">At Eco Cleanser, we believe pet grooming should be as natural and safe as your love for them. Our bar soap is a testament to clean ingredients, gentle care, and sustainable living. Handcrafted in India, it's a proud blend of herbal wisdom and science.</p>
                                     </div>
                                 </div>
-                                <div class="why-feature1">
+                                <div class="why-feature-prod">
                                     <div class="box-icon">
                                         <img src="assets/img/icon/pets.svg" alt="">
                                     </div>
                                     <div class="media-body">
-                                        <div class="box-title">Vet-Approved</div>
-                                        <p class="box-text">Our products are certified by reputable organic.</p>
+                                        <div class="box-title">Ideal For</div>
+                                        <p class="box-text">Sensitive or dry skin - Regular grooming routines - Pet parents who value eco-conscious living</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-auto d-none d-lg-block">
-                            <div class="img-box4 mt-0">
-                                <img src="assets/img/product/ec-soap2.png" alt="Why" style="height: 430px;">
+                        <div class="col-lg-5 col-12 d-lg-block prd-img">
+                            <div class="img-box4 prd-img mt-0">
+                                <img class="" src="assets/img/product/ec-soap2.png" alt="Why">
                             </div>
                         </div>
-                        <div class="col-sm-auto">
-                            <div class="why-feature1-right">
-                                <div class="why-feature1">
+                        <!-- <div class="col-sm-auto">
+                            <div class="why-feature-prod-right">
+                                <div class="why-feature-prod">
                                     <div class="box-icon">
                                         <img src="assets/img/icon/pets.svg" alt="">
                                     </div>
@@ -389,7 +399,7 @@
                                         <p class="box-text">Our products are certified by reputable organic.</p>
                                     </div>
                                 </div>
-                                <div class="why-feature1">
+                                <div class="why-feature-prod">
                                     <div class="box-icon">
                                         <img src="assets/img/icon/pets.svg" alt="">
                                     </div>
@@ -398,7 +408,7 @@
                                         <p class="box-text">Our products are certified by reputable organic.</p>
                                     </div>
                                 </div>
-                                <div class="why-feature1">
+                                <div class="why-feature-prod">
                                     <div class="box-icon">
                                         <img src="assets/img/icon/pets.svg" alt="">
                                     </div>
@@ -408,7 +418,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </section>
@@ -420,10 +430,10 @@
                     <a class="nav-link th-btn active" id="reviews-tab" data-bs-toggle="tab" href="#reviews" role="tab" aria-controls="reviews" aria-selected="true">Customer Reviews</a>
                 </li>
             </ul> -->
-            <div class="" id="">
+            <div class="mt-5" id="">
                 <div class="">
-                    <p>Prepare to embark on a sensory journey with the Bosco Apple, a fruit that transcends the ordinary and promises an unparalleled taste experience. These apples are nothing short of nature’s masterpiece, celebrated for their distinctive blend of flavors and their captivating visual allure. Bosco Apples are a revelation for your taste buds. Their impeccable balance of sweetness and tartness creates a complex, layered taste profile that keeps you coming back for more. Each bite is a symphony of sweet and tangy notes, making these apples a gastronomic delight whether enjoyed fresh or as a key ingredient in your favorite culinary creations.</p>
-                    <p>The Bosco Apple is not just a fruit; it’s a work of art. Its striking, deep red skin is adorned with intricate speckles, making it a showstopper in the world of fruit aesthetics. Display these apples with pride in your kitchen, and you’ll undoubtedly draw admiration from all who see them. We take our commitment to the environment seriously. Bosco Apples are cultivated on eco-friendly orchards that prioritize sustainable farming practices. You can savor these apples knowing they are grown with respect for the planet, aligning with your values of environmental responsibility. Whether you’re a culinary aficionado or a casual home chef, Bosco Apples offer limitless possibilities in the kitchen. Slice them into a vibrant salad, transform them into mouthwatering pies, or blend them into wholesome applesauce. The culinary canvas is yours to paint with these versatile apples.</p>
+                    <p>Give your pet the care they truly deserve with Eco Cleanser Pet Soap, a gentle, plant-based bathing solution formulated for both dogs and cats. Enriched with the natural goodness of Aloe Vera and Vitamin E, this soap hydrates dry skin, soothes irritation, and restores a healthy shine to your pet’s coat. Unlike conventional grooming products, Eco Cleanser is completely free from harsh chemicals, parabens, sulfates, and synthetic fragrances, making it a safe choice even for pets with sensitive skin. Whether it’s a full bath or a quick spot clean, this multipurpose soap bar offers a calming, nourishing cleanse that helps maintain your pet’s natural skin balance while keeping them fresh and clean.</p>
+                    <p>Crafted in India by Green Medi Biotech, Eco Cleanser Pet Soap is not only good for your pet but also kind to the environment. Its biodegradable, eco-conscious formula makes it a responsible choice for pet parents who care about sustainable living. Each 75g bar is carefully designed to deliver consistent results, offering a spa-like experience with every wash. With its refreshing Aloe Vera scent, skin-friendly ingredients, and premium quality, Eco Cleanser stands out as a reliable, everyday grooming essential that blends herbal wisdom with modern care. Give your furry companion a healthy, chemical-free bath time that’s as pure as your love for them.</p>
                 </div>
                 <div class="mt-5" >
                     <div class="woocommerce-Reviews">
