--- a/about.html
+++ b/about.html
@@ -304,10 +304,11 @@
                 </div>
                 <div class="col-xl-6 text-center text-xl-start">
                     <div class="title-area mb-32">
-                        <span class="sub-title"><img src="assets/img/icon/pets.svg" alt="shape">About Us</span>
-                        <h2 class="sec-title">Naturally Clean, Genuinely Caring – The Eco Cleanser Story</h2>
-                        <p class="sec-text txt-justify">We believe that pet care should be as pure and loving as the bond you share with your furry companions. Our journey began with a simple mission: to create eco-friendly grooming products that are safe for pets, kind to the planet, and made with nature’s best. <br>
-                            Our products are crafted with natural ingredients like neem, aloe vera, coconut oil, and essential plant extracts—free from harmful chemicals, synthetic fragrances, and artificial dyes. We’re proud to support a clean lifestyle for your pets, from bath time to bedtime.</p>
+                        <span class="sub-title"><img src="assets/img/icon/pets.svg" alt="shape">Eco Cleanser Story</span>
+                        <h2 class="sec-title">Born from Love, Rooted in Nature</h2>
+                        <p class="sec-text txt-justify">WWe believe pet care should be as pure as the love you share with your furry friend. That’s why we created gentle, planet-friendly grooming products—safe for pets, kind to the Earth, and powered by nature’s best ingredients.<br>
+                            Think neem for soothing skin, aloe vera for hydration, and coconut oil for a shiny coat—no harsh chemicals, fake fragrances, or harmful additives. Just clean, vet-approved care that keeps tails wagging and the world greener. Because your pet deserves a bath as wholesome as their playtime.
+                        </p>
                     </div>
                     <div class="checklist list-two-column mb-40">
                         <ul>
@@ -340,7 +341,7 @@
                                     <img src="assets/img/icon/pets.svg" alt="Image">
                                 </div>
                                 <h3 class="box-title"><a href="shop.html">Mision</a></h3>
-                                <p class="box-subtitle">To provide pet parents with safe, sustainable, and natural grooming solutions that protect both their pets and the environment. Compassion for animals, environmental responsibility, ingredient transparency.</p>
+                                <p class="box-subtitle">To create safe, natural pet care that cleans gently, respects the planet, and keeps tails wagging—because every pet deserves pure love in every drop.</p>
                             </div>
                         </div>
                     </div>
@@ -352,7 +353,7 @@
                                     <img src="assets/img/icon/dog-face.svg" alt="Image">
                                 </div>
                                 <h3 class="box-title"><a href="shop.html">Vison</a></h3>
-                                <p class="box-subtitle">To become the most trusted eco-conscious pet care brand globally, promoting wellness and clean living for every tail-wagger. Compassion for animals, environmental responsibility, ingredient transparency.</p>
+                                <p class="box-subtitle">A future where every pet thrives with toxin-free care, every home chooses sustainability, and nature’s goodness is the only ingredient list.</p>
                             </div>
                         </div>
                     </div>
@@ -364,7 +365,7 @@
                                     <img src="assets/img/icon/paw-prints.svg" alt="Image">
                                 </div>
                                 <h3 class="box-title"><a href="shop.html">Values</a></h3>
-                                <p class="box-subtitle">Compassion for animals, environmental responsibility, ingredient transparency, and continuous innovation. Compassion for animals, environmental responsibility, ingredient transparency, and continuous innovation.</p>
+                                <p class="box-subtitle">We stand for purity, safety and sustainability. Every bottle is a promise - made with heart, powered by nature, and crafted with love for pets, people, and the planet.</p>
                             </div>
                         </div>
                     </div>
@@ -456,8 +457,8 @@
                     <div class="ps-xxl-5 ps-xl-2 ms-xl-1 text-center text-xl-start">
                         <div class="title-area mb-32">
                             <span class="sub-title"><img src="assets/img/icon/pets.svg" alt="shape">Why Eco Cleanser</span>
-                            <h2 class="sec-title">A Fresh Start With Every Wash</h2>
-                            <p class="sec-text txt-justify">We take pride in sourcing our ingredients from certified organic farms, ensuring every bottle delivers gentle cleansing, deep nourishment, and zero compromise. Our products are handcrafted with care to maintain the highest standards of pet wellness. <br> Say goodbye to irritation, flakes, and chemical residues. Our shampoos, soaps, and kennel washes are designed to soothe, soften, and shine—naturally.</p>
+                            <h2 class="sec-title">Trusted by Vets, Loved by Pets</h2>
+                            <p class="sec-text txt-justify">Because your pet deserves more than clean — they deserve care rooted in purity, safety, and sustainability. At Eco-Cleanser, we handcraft every product with natural, certified-organic ingredients like neem, aloe, and coconut oil—free from harsh chemicals, rich in love. Gentle on skin, tough on dirt, and kind to the planet, our formulas deliver the clean you trust and the wellness your pet needs.</p>
                         </div>
                         <!-- <div class="about-feature-wrap">
                             <div class="about-feature">
@@ -490,8 +491,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-7">
                     <div class="title-area text-center">
-                        <span class="sub-title"><img src="assets/img/icon/pets.svg" alt="Icon">What’s Inside Eco Cleanserr</span>
-                        <h2 class="sec-title">Why Eco-Cleanser formula is different</h2>
+                        <span class="sub-title"><img src="assets/img/icon/pets.svg" alt="Icon">What’s Inside Eco Cleanser</span>
+                        <h2 class="sec-title">No Hidden Chemicals, Just Pure Pet Love</h2>
                     </div>
                 </div>
             </div>
@@ -505,8 +506,8 @@
                             <img src="assets/img/icon/service_card_1.svg" alt="Icon">
                         </div>
                         <div class="box-content">
-                            <h3 class="box-title"><a href="service-details.html">Oatmeal-Aloe Vera</a></h3>
-                            <p class="box-text">Soothes itchy skin and hydrates dry coats for a soft, healthy shine.</p>
+                            <h3 class="box-title"><a href="products.html">Soothing & Hydrating Care</a></h3>
+                            <p class="box-text">Oatmeal + Aloe Vera + Vitamin E Calms itchy skin, hydrates dry coats, and leaves fur irresistibly soft and shiny.</p>
                         </div>
                         <!-- <a href="service-details.html" class="icon-btn"><i class="far fa-arrow-right"></i></a> -->
                     </div>
@@ -520,8 +521,8 @@
                             <img src="assets/img/icon/service_card_2.svg" alt="Icon">
                         </div>
                         <div class="box-content">
-                            <h3 class="box-title"><a href="service-details.html">Apple Cider Vinegar</a></h3>
-                            <p class="box-text">Restores pH balance and helps manage odors naturally.</p>
+                            <h3 class="box-title"><a href="products.html">Natural Odor & pH Balance</a></h3>
+                            <p class="box-text">Apple Cider Vinegar Gently neutralizes odors and restores healthy skin pH - so your pet smells fresh, not "perfumed.</p>
                         </div>
                         <!-- <a href="service-details.html" class="icon-btn"><i class="far fa-arrow-right"></i></a> -->
                     </div>
@@ -535,8 +536,8 @@
                             <img src="assets/img/icon/service_card_3.svg" alt="Icon">
                         </div>
                         <div class="box-content">
-                            <h3 class="box-title"><a href="service-details.html">Vitamin E Boost</a></h3>
-                            <p class="box-text">Protects skin, strengthens fur, and promotes healing.</p>
+                            <h3 class="box-title"><a href="products.html">Nourishing & Protective Shield</a></h3>
+                            <p class="box-text">Coconut Oil + Neem Extract Deeply moisturizes fur, fights bacteria, and protects skin - all without harsh chemicals.</p>
                         </div>
                         <!-- <a href="service-details.html" class="icon-btn"><i class="far fa-arrow-right"></i></a> -->
                     </div>
